Subiendo modificaciones, ej6,ej7,ej8